<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_info_app_two_part_one"
            android:padding="24dp"
            android:textSize="12sp"
            android:textColor="@color/textColorSecondary"
            android:fontFamily="@font/poppins_medium"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_info_app_two_part_two"
            android:padding="24dp"
            android:textSize="12sp"
            android:textColor="@color/textColorSecondary"
            android:fontFamily="@font/poppins_medium"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_info_app_two_part_three"
            android:padding="24dp"
            android:textSize="12sp"
            android:textColor="@color/textColorSecondary"
            android:fontFamily="@font/poppins_medium"
            />
    </LinearLayout>
</LinearLayout>