<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_bacground"
    tools:context=".activities.pasien.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/skip_to_menu"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:inputType="textCapSentences"
            android:textSize="14dp"
            android:textColor="@color/textColorPrimary"
            android:fontFamily="@font/poppins_medium"
            android:text="Lewati"
            android:layout_marginTop="34dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_secondary"
            />
<!--        Hero image -->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:src="@drawable/app_icon_complete"
            android:layout_marginTop="24dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_login"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/textColorSecondary"
            />

<!--        Form for User Input-->
<!--        Email-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="39dp"
            />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="Alamat Email"
            android:textSize="14sp"
            android:textColorHint="@color/textColorSecondary"
            android:fontFamily="@font/poppins_medium"
            android:drawablePadding="16dp"
            android:drawableLeft="@drawable/mail_icon"
            android:padding="16dp"
            android:layout_gravity="center"
            android:background="@drawable/form_user_input"
            android:layout_marginTop="10dp"
            />


        <!--        Password-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="22dp"
            />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:textColorHint="@color/textColorSecondary"
            android:fontFamily="@font/poppins_medium"
            android:drawablePadding="16dp"
            android:drawableLeft="@drawable/lock_icon"
            android:padding="16dp"
            android:layout_gravity="center"
            android:background="@drawable/form_user_input"
            android:layout_marginTop="10dp"
            />

<!--        Checkbox-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox"
                android:text="Ingat Saya"
                android:textSize="14sp"
                android:padding="13sp"
                android:textColor="@color/textColorSecondary"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="23dp"
                />

            <Button
                android:id="@+id/forgot_password_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lupa_password"
                android:textSize="14sp"
                android:inputType="textCapSentences"
                android:textAlignment="textEnd"
                android:textColor="@color/primaryColor"
                android:layout_marginRight="35dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="end"
                android:fontFamily="@font/poppins_medium"
                android:background="@android:color/transparent"
                />
        </FrameLayout>

        <ProgressBar
            android:id="@+id/login_proses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:indeterminateTint="@color/primaryColor"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/login_user"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textCapSentences"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:text="Masuk"
            android:layout_marginTop="20dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="120dp"
            android:paddingRight="120dp"
            android:background="@drawable/button_primary"
            />

        <Button
            android:id="@+id/login_with_google"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textSize="14dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Masuk dengan Google"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/button_secondary"
            android:drawableStart="@drawable/icon_google"
            android:drawableLeft="@drawable/icon_google"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Belum punya akun ?"
                    android:layout_marginLeft="60dp"
                    android:fontFamily="@font/poppins_medium"
                    />

                <Button
                    android:id="@+id/registrasi_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daftar_sekarang"
                    android:textSize="14sp"
                    android:inputType="textCapSentences"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryColor"
                    android:layout_marginRight="55dp"
                    android:layout_marginTop="-12dp"
                    android:layout_gravity="end"
                    android:fontFamily="@font/poppins_medium"
                    android:background="@android:color/transparent"
                    />
            </FrameLayout>

    </LinearLayout>

</ScrollView>